--- a/DioceseKpalime/index.html
+++ b/DioceseKpalime/index.html
@@ -2,7 +2,7 @@
 <!--
 index.html
 Komlan Albert Gblokpor-Koffi
-Dernière modification : 17-07-2020
+Dernière modification : 11-11-2020
 -->
 
 <html lang="fr">
@@ -31,18 +31,83 @@ Dernière modification : 17-07-2020
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">Accueil</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="actualites.html">Actualités</a>
-            </li>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="NousJoindre.html">Nous joindre</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+             <li class="nav-item">
+                 <a class="nav-link" href="actualites.html">Actualités</a>
+             </li>
 
-<!--section caroussel- -->
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink0" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Diocèse de Kpalimé
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Actualités</a>
+                     <a class="dropdown-item" href="#">Trouver une église</a>
+                     <a class="dropdown-item" href="#">Trouver un mouvement </a>
+                     <a class="dropdown-item" href="#">Évêques</a>
+
+                 </div>
+             </li>
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Services
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Services des ressources humaines</a>
+                     <a class="dropdown-item" href="#">Services de la pastorale </a>
+                     <a class="dropdown-item" href="#">Services du droit</a>
+                     <a class="dropdown-item" href="#">Services adminstratifs</a>
+                 </div>
+             </li>
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Homélies
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Homélie de Monseigneur</a>
+                     <a class="dropdown-item" href="#">homélies des dimanches<</a>
+                     <a class="dropdown-item" href="#">Homélies des solennités </a>
+                 </div>
+             </li>
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Sacrements
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Préparation aux sacrements</a>
+                     <a class="dropdown-item" href="#">Baptême</a>
+                     <a class="dropdown-item" href="#">Confirmation</a>
+                     <a class="dropdown-item" href="#">Eucharistie</a>
+                     <a class="dropdown-item" href="#">Mariage</a>
+                     <a class="dropdown-item" href="#">Réconciliation</a>
+                     <a class="dropdown-item" href="#">Onction des malades</a>
+                     <a class="dropdown-item" href="#">Ordre</a>
+                 </div>
+             </li>
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink4" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Faire un don
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Capitation et autres dons en ligne</a>
+                     <a class="dropdown-item" href="#">Aidez votre paroisse</a>
+                     <a class="dropdown-item" href="#"></a>
+                 </div>
+             </li>
+             <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink5" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Nous joindre
+                 </a>
+                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                     <a class="dropdown-item" href="#">Bureau de Monseigneur</a>
+                     <a class="dropdown-item" href="#">Bureau de Vicaire Général</a>
+                     <a class="dropdown-item" href="#">Bureau du Chancelier </a>
+                 </div>
+             </li>
+         </ul>
+     </div>
+ </nav>
+
+ <!--section caroussel- -->
 <div id="demo" class="carousel slide" data-ride="carousel">
 
     <!-- Indicators -->
@@ -54,6 +119,9 @@ Dernière modification : 17-07-2020
     <!-- The slideshow -->
     <div class="carousel-inner">
         <div class="carousel-item active">
+            <img src="img/Banniere2.jpg" alt="jmj Kpalime">
+        </div>
+        <div class="carousel-item ">
             <img src="img/slie_jubile.jpg" alt="jmj Kpalime">
         </div>
         <div class="carousel-item">
@@ -92,7 +160,57 @@ Dernière modification : 17-07-2020
            Ordination sacerdotale : samedi 8 aout 2020 <br> Cliquez pour découvrir nos futurs prêtres
         </button>
     </div>
-    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+    <div class="container-fluid" >
+        <ul> <li><a href="index.html">  <p>Mon premier exercice </p> </a></li>
+            <li><a href="deuxieme.html"> <p>Mon deuxième exercice </p></a></li>
+            <li><a href="troisieme.html"><p>Mon troisième exercice </p></a></li>
+            <li><a href="quatrieme.html"><p>Mon quatrième exercice </p></a></li>
+            <li> <a href="cinquieme.html"><p>Mon cinquième exercice </p></a>
+            <li>  <a href="sixieme.html"><p>Mon sixième exercice </p></a></a>
+        </ul>
+        <div class="row">
+            <div class="col-md-3 col-6 fondRouge">
+
+            </div>
+            <div class="col-md-5 col-6 fondVert">
+
+            </div>
+            <div class="col-md-1 col-3 fondBleu">
+
+            </div>
+            <div class="col-md-3 col-9 fondVert">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-6 fondVert">
+
+            </div>
+            <div class="col-md-9 col-6 fondRouge">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-12 fondJaune">
+
+            </div>
+            <div class="col-md-3 col-12 fondBleu">
+
+            </div>
+            <div class="col-md-6 col-12 fondVert">
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+        <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
