--- a/ProjetFinal_KomlanGblokpor-Koffi/index.html
+++ b/ProjetFinal_KomlanGblokpor-Koffi/index.html
@@ -14,6 +14,8 @@ Dernière modification : 11-11-2020
     <link rel="icon" type="image/png" href="img/logo.jpg" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="anime-master/lib/anime.min.js"></script>
+    <script></script>
 </head>
 <header>
 
