--- a/ProjetFinal_KomlanGblokpor-Koffi/index.html
+++ b/ProjetFinal_KomlanGblokpor-Koffi/index.html
@@ -12,10 +12,15 @@ Dernière modification : 11-11-2020
     <title>Diocese de Kpalimé</title>
     <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
     <link rel="icon" type="image/png" href="img/logo.jpg" />
+
     <link rel="stylesheet" href="css/style.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="anime-master/lib/anime.min.js"></script>
-    <script></script>
+    <script src="js/script.js"></script>
+
+
+
 </head>
 <header>
 
@@ -213,46 +218,70 @@ Dernière modification : 11-11-2020
 
 
 <section id="SectionEvenement">
-    <div class="container  text-center p-3">
-        <div class="row" id="Evenement">
-            <div class="col-12">
-                <h1> Événements à venir</h1>
-                <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-6 col-xl-3 p-3 ">
-                <img src="img/DSCF4743.JPG" height="245" width="245"/>
-                <h4>La prochaine JDJ </h4>
-                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
-            </div>
-            <div class="col-12 col-md-6 col-xl-3 p-3 ">
-                <img src="img/ordinationDiaconal.jpg" height="245" width="245"/>
-                <h4> Ordination sacerdotale </h4>
-                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
+    <!--debut de de l'effet -->
+    <svg class="anchorBezierSVG" viewBox="0 0 800 200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" >
 
-                <button type="button" class="btn btn-success">Lire la suite</button>
-            </div>
-            <div class="col-12 col-md-6 col-xl-3 p-3">
-                <img src="img/Jubile_Argent1.jpg" height="245" width="245"/>
-                <h4> Enseignement</h4>
-                <p> Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
-            </div>
-            <div class="col-12 col-md-6 col-xl-3 p-3 ">
-                <img src="img/Kpalime_MgrBarrigah.jpg" height="245" width="245"/>
-                <h4> Café spirituel</h4>
-                <p>Mais à tous ceux qui l'ont reçue, à ceux qui croient en son nom, elle a donné le pouvoir de devenir enfants de Dieu” (Jean 1.12) </p>
-                <button type="button" class="btn btn-success">Lire la suite</button>
-            </div>
-        </div>
-        <div class="container text-center p-3">
-            <button type="button" class="btn btn-outline-secondary">Voir les autres événements </button>
-            <hr>
-        </div>
-    </div>
-<div class="container-fluid text-left textFormulaire" id="partie7">
+        <defs>
+            <g id="anchorPopGroup" fill="none" stroke="#ededed" stroke-width="3" stroke-linecap="round" stroke-miterlimit="10">
+                <line  x1="24" y1="17.5" x2="24" y2="1.5"/>
+                <line  x1="29.5" y1="25" x2="45.5" y2="25"/>
+                <line  x1="23" y1="30.5" x2="23" y2="46.5"/>
+                <line  x1="17.5" y1="24" x2="1.5" y2="24"/>
+            </g>
+            <mask id="mainMask">
+                <rect width="100%" height="100%" fill="#000"/>
+                <path class="mainLineMask" fill="#FFF" stroke="none" stroke-miterlimit="10" d="M148,122.5c133-92.2,377-84.8,504,0C762.3,196.2,58.4,184.6,148,122.5z"/>
+            </mask>
+            <mask id="mainMaskInverse">
+                <rect width="100%" height="100%" fill="#FFF"/>
+                <path class="mainLineMask" fill="#000" stroke="none" stroke-miterlimit="10" d="M148,122.5c133-92.2,377-84.8,504,0C762.3,196.2,58.4,184.6,148,122.5z"/>
+            </mask>
+        </defs>
+        <g mask="url(#mainMask)">
+
+            <text class="maskText1" x="50%" y="60%" style="fill:#ededed;">www.diocesedekpalime.tg</text>
+        </g>
+        <g mask="url(#mainMaskInverse)">
+
+            <text class="maskText2" x="50%" y="60%" style="fill:#5783FC;">PElÉRINAGE</text>
+        </g>
+        <path id="mainLine" fill="none" stroke="none" stroke-width="3" stroke-miterlimit="10" d="M148,122.1c133-87.1,377-87.8,504,0"/>
+        <path class="mainLineStart" stroke-linecap="round" fill="none" stroke="#5783FC" stroke-width="2" stroke-miterlimit="10" d="M148,122.1
+	c20.7-21.9,98.7-100.2,96.7-95.5"/>
+        <g id="anchorGroupL">
+
+            <line id="anchorLineLTop" fill="none" stroke="#5783FC" stroke-width="3" stroke-miterlimit="10" x1="155.8" y1="115.1" x2="243.7" y2="27.2"/>
+            <line id="anchorLineLBot" fill="none" stroke="#5783FC" stroke-width="3" stroke-miterlimit="10" x1="140.8" y1="130.1" x2="52" y2="218.9"/>
+            <circle id="anchorDragLTop" fill="#5783FC" cx="243.7" cy="27.2" r="5.6"/>
+            <circle id="anchorDragLBot" fill="#5783FC" cx="52" cy="218.9" r="5.6"/>
+        </g>
+
+        <rect id="anchorPointL" x="139.7" y="113.8" fill="#5783FC" stroke="#5783FC" stroke-width="5" stroke-miterlimit="10" width="15.8" height="15.8"/>
+
+        <g id="anchorGroupR">
+            <line id="anchorLineRTop" fill="none" stroke="#5783FC" stroke-width="3" stroke-miterlimit="10" x1="658.8" y1="115.1" x2="746.7" y2="27.2"/>
+            <line id="anchorLineRBot" fill="none" stroke="#5783FC" stroke-width="3" stroke-miterlimit="10" x1="643.8" y1="130.1" x2="555" y2="218.9"/>
+            <circle id="anchorDragRTop" fill="#5783FC" cx="746.7" cy="27.2" r="5.6"/>
+            <circle id="anchorDragRBot" fill="#5783FC" cx="555" cy="218.9" r="5.6"/>
+
+        </g>
+        <rect id="anchorPointR" x="643.8" y="113.8" fill="#5783FC" stroke="#5783FC" stroke-width="5" stroke-miterlimit="10" width="15.8" height="15.8"/>
+        <g id="nib">
+            <g id="nibInnerGroup">
+                <polygon fill="#1d1d1d" stroke="#ededed" stroke-width="2" stroke-miterlimit="10" points="1.7,1.8 8.7,20.9 20.7,27.5 27.5,20.8
+		19.9,9 	"/>
+
+                <rect x="19.7" y="23.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -11.9343 28.0365)" fill="#1d1d1d" stroke="#ededed" stroke-width="2" stroke-miterlimit="10" width="16.4" height="10.1"/>
+                <line fill="none" stroke="#ededed" stroke-width="2" stroke-miterlimit="10" x1="24.2" y1="24.1" x2="16.6" y2="16.6"/>
+                <circle fill="#ededed" cx="16.6" cy="16.6" r="2.5"/>
+            </g>
+        </g>
+
+
+    </svg>
+<!--Fin de de l'effet -->
+
+    <div class="container-fluid text-left textFormulaire" id="partie7">
     <div class="row">
         <div class="col-12 col-xl-6 offset-xl-3">
             <h2 id="message" class="text-center"> Inscription  NOËL en Ligne 2020 !</h2>
