--- a/ProjetFinSession/index.html
+++ b/ProjetFinSession/index.html
@@ -14,6 +14,8 @@ Dernière modification : 11-11-2020
     <link rel="icon" type="image/png" href="img/logo.jpg" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="anime-master/lib/anime.min.js"></script>
+
 </head>
 <header>
 
@@ -217,8 +219,6 @@ Dernière modification : 11-11-2020
     </svg>
 
 
-
-
     <!--Fin de de l'effet -->0
 </section>
 <section>
@@ -420,5 +420,6 @@ Dernière modification : 11-11-2020
 
     <script src="https://kit.fontawesome.com/a46d75ba7a.js"></script>
 <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
