--- a/ProjetFinSession/galleries.html
+++ b/ProjetFinSession/galleries.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="anime-master/lib/anime.min.js"></script>
 
 </head>
@@ -13,11 +13,11 @@
 <div id="captioned-gallery">
     <figure class="slider">
         <figure>
-            <img src="img/Jubile_Argent_Diocèse_Kpalime32.jpg" alt>
+            <img src="img/Monseigneur.jpg" alt>
             <figcaption>Hobbiton, New Zealand</figcaption>
         </figure>
         <figure>
-            <img src="wanaka-drowned-tree.jpg" alt>
+            <img src="img/Jubile_Argent_Diocèse_Kpalime28.jpg" alt>
             <figcaption>Wanaka, New Zealand</figcaption>
         </figure>
         <figure>
@@ -25,7 +25,7 @@
             <figcaption>Utah, United States</figcaption>
         </figure>
         <figure>
-            <img src="img/Jubile_Argent_Diocèse_Kpalime34.jpg" alt>
+            <img src="img/Jubile_Argent_Diocese_Kpalime34.jpg" alt>
             <figcaption>Bryce Canyon, Utah, United States</figcaption>
         </figure>
         <figure>
