--- a/ProjetFinSession/index.html
+++ b/ProjetFinSession/index.html
@@ -34,17 +34,17 @@ Dernière modification : 11-11-2020
                 <a class="nav-link" href="index.html">Accueil</a>
             </li>
              <li class="nav-item btn-outline-success">
-                 <a class="nav-link" href="inscription.html">Inscritpion Retraite pascale en ligne </a>
+                 <a class="nav-link" href="sacrements.html">Sacrements </a>
              </li>
 
             <li class="nav-item btn-outline-success">
-                <a class="nav-link" href="inscription.html">Diocèse de Kpalimé</a>
+                <a class="nav-link" href="dioceseDeKpalime.html">Diocèse de Kpalimé</a>
             </li>
             <li class="nav-item btn-outline-success">
-                <a class="nav-link" href="inscription.html"> Services</a>
+                <a class="nav-link" href="galleries.html"> Galleries </a>
             </li>
             <li class="nav-item btn-outline-success">
-                <a class="nav-link" href="inscription.html">Faire un don </a>
+                <a class="nav-link" href="faireUnDon.html">Faire un don </a>
             </li>
 
          </ul>
