--- a/ProjetFinSession/sacrements.html
+++ b/ProjetFinSession/sacrements.html
@@ -71,8 +71,11 @@
                         </div>
 
                         <div class=" col-12 mb-10 " id="partie7">
-
-                        <h1 class="kpalime"> LA SAINTE TRINITÉ BÉNISSE KPALIMÉ</h1>
+                        <svg height="300" width="300">
+                            <polygon points="140,10 290,290 10,290" fill="white" stroke="black" stroke-width="5"></polygon>
+                        </svg>
+                        <br>
+                        <h1 class="Destination"> LA SAINTE TRINITÉ BÉNISSE KPALIMÉ</h1>
                     </div>
                     </div>
                     <button type="submit" class="btn btn-outline-primary">Envoyez votre demande </button>
@@ -82,17 +85,7 @@
     </div>
 </div>
 
-var path = anime.path('.motion-path-demo path');
 
-anime({
-targets: '.motion-path-demo .el',
-translateX: path('x'),
-translateY: path('y'),
-rotate: path('angle'),
-easing: 'linear',
-duration: 2000,
-loop: true
-});
 
 
 
