--- a/ProjetFinSession/index.html
+++ b/ProjetFinSession/index.html
@@ -152,11 +152,13 @@ Dernière modification : 11-11-2020
     </div>
     </div>
 </section>
+<section>
 
+
+</section>
 
 <section id="SectionEvenemente">
     <!--debut de de l'effet de la librairie javascript d'animation -->
-
 
     <!--Fin de de l'effet -->0
 </section>
