--- a/ProjetFinSession/galleries.html
+++ b/ProjetFinSession/galleries.html
@@ -90,7 +90,7 @@ https://creativecommons.org/licenses/by/2.0/legalcode
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-lg-4 col-sm-10 logo">
-                    <img src="img/.jpg"/>
+                    <img src="img/ucao.jpg"/>
                 </div>
                 <div class="col-lg-5 col-sm-10 logo"></div>
                 <div class="col-lg-3 col-sm-10 ">
