--- a/ProjetFinSession/sacrements.html
+++ b/ProjetFinSession/sacrements.html
@@ -93,7 +93,7 @@
     <div class="container-fluid text-center">
         <div class="row">
             <div class="col-lg-4 col-sm-10 logo">
-                <img src="img/.jpg"/>
+                <img src="img/ucao.jpg"/>
             </div>
             <div class="col-lg-5 col-sm-10 logo"></div>
             <div class="col-lg-3 col-sm-10 ">
