--- a/DioceseKpalime/NousJoindre.html
+++ b/DioceseKpalime/NousJoindre.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
-index.html
+Nousjoindre.html
 Komlan Albert Gblokpor-Koffi
 Albert
-Dernière modification : 15-07-2020
+Dernière modification : 12-11-2020
 -->
 
 <html lang="fr">
