--- a/ProjetFinSession/dioceseDeKpalime.html
+++ b/ProjetFinSession/dioceseDeKpalime.html
@@ -1,4 +1,12 @@
 <html lang="fr">
+
+<!--
+diocesedekpalime.html
+Komlan Albert Gblokpor-Koffi
+Albert
+Dernière modification : 12-11-2020
+-->
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
