--- a/ProjetFinSession/FaireUnDon.html
+++ b/ProjetFinSession/FaireUnDon.html
@@ -59,7 +59,7 @@ Dernière modification : 11-11-2020
         </div>
     </div>
 </section>
-<div id="">
+<div id="partie4">
 
     <div  class="container-fluid text-left"  >
         <h3 id="don"> Je veux donner à ma paroisse  </h3>
@@ -216,6 +216,7 @@ Dernière modification : 11-11-2020
                 </form>
             </div>
     </div>
+</div>>
 
 
     <div class="piedpage">
